fix: correct form toggle buttons and z-index styles

--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -390,6 +390,7 @@ input:checked + .slider:before {
   transform: translateX(20px);
 }
 /* swicher style end*/
+
 /* Sign Up modal */
 .is-hidden {
   display: none;
@@ -405,7 +406,7 @@ input:checked + .slider:before {
   width: 100%;
   height: 100%;
   background-color: #4f2ee8;
-  z-index: 10;
+  z-index: 30;
 }
 .form-field {
   position: relative;
@@ -610,7 +611,7 @@ svg.logo-icon {
   height: 100%;
   min-width: 375px;
   min-height: 812px;
-  z-index: 10;
+  z-index: 20;
   background: radial-gradient(circle at top, #4f2ee8 25%, #ffffff);
 }
 .mobile-logo-header {
